--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -14,17 +14,18 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical">
 
-        <Spinner
+        <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/dateChoosingSpinner"
-            android:layout_weight="4" />
+            android:id="@+id/chooseDateButton"
+            android:layout_weight="3" />
 
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/addButton"
             android:layout_weight="1" />
+
     </LinearLayout>
 
     <ListView
