--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,4 +99,11 @@
         android:id="@+id/newsList"
         android:layout_weight="1" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/edit"
+        android:id="@+id/button"
+        android:onClick="edit" />
+
 </LinearLayout>
