20160828 一応ひと段落。ScheduleActivityのボタンを押したときの動作とデバッグした時に感じた違和感を直したらアラームを作っていこう。

--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -43,7 +43,7 @@
             android:id="@+id/addScheduleButton"
             android:layout_weight="1"
             android:onClick="addSchedule"
-            android:src="@drawable/addButton" />
+            android:src="@drawable/addbutton" />
 
     </LinearLayout>
 
