--- a/app/src/main/res/layout/edit_schedule_layout.xml
+++ b/app/src/main/res/layout/edit_schedule_layout.xml
@@ -6,12 +6,26 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText" />
+        android:id="@+id/scheduleEditText" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New CheckBox"
-        android:id="@+id/checkBox"
-        android:checked="false" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/eraseButton"
+            android:layout_weight="1"
+            android:text="@string/add" />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/addButton"
+            android:layout_weight="1"
+            android:text="@string/erase" />
+    </LinearLayout>
+
 </LinearLayout>
