20161024 エラー退治完了！つるつるぴかぴかのまだまだ小さいコードですが何卒よろしく。あとは、デザイン・ホームに戻るボタン・ホームのデザイン・何より大事な目覚まし実装など。がんばれ！コードは君の味方！

--- a/app/src/main/res/layout/schedule_editor_layout.xml
+++ b/app/src/main/res/layout/schedule_editor_layout.xml
@@ -5,10 +5,9 @@
     android:gravity="center_vertical">
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/scheduleTitleText"
-        android:layout_weight="5" />
+        android:id="@+id/scheduleTitleText" />
 
 </LinearLayout>
